--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,5 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "react-star-ratings": "^2.3.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
