--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "bootstrap": "^4.0.0",
     "bootstrap-daterangepicker": "^2.1.30",
     "camel-case": "^3.0.0",
+    "cryptiles": "^4.1.3",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
+    "merge": "^1.2.1",
     "moment": "^2.22.2",
     "mongoose": "^5.0.17",
     "multer": "^1.3.1",
@@ -44,7 +46,8 @@
     "redux": "^3.7.2",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
-    "titleize": "^1.0.1"
+    "titleize": "^1.0.1",
+    "url-parse": "^1.4.4"
   },
   "scripts": {
     "heroku-postbuild": "npm run build",
